<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PicArete</string>
    <string name="app_version">v0.9</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="solo">Solo</string>
    <string name="multi">Multi-player</string>
    <string name="custom">Customization</string>
    <string name="profile">Profile</string>
    <string name="soloModeChooser">Mode chooser</string>
    <string name="mode">Mode</string>
    <string name="column">Columns</string>
    <string name="row">Row</string>
    <string name="toughness">IA Difficulty</string>
    <string name="validate">Validate</string>
    <string name="hintColumn">Number of columns</string>
    <string name="hintRow">Number of rows</string>
    <string name="dlg_solo_win_title">Win</string>
    <string name="dlg_solo_win_msg">Congratulation, you win the level !</string>
    <string name="dlg_solo_retry">Retry</string>
    <string name="dlg_solo_continue">Return to home</string>
    <string name="yourTurn">Your turn !</string>
    <string name="startPoints">0</string>
    <string name="score">Score</string>
    <string name="xp">Level :</string>
    <string name="dlg_solo_lost_title">Lose</string>
    <string name="dlg_solo_lost_msg">Oh, you lose the game...</string>
    <string name="dlg_solo_equality_title">Equality</string>
    <string name="dlg_solo_equality_msg">You are equality with your opponent...</string>
    <string name="dlg_multi_retry">Retry</string>
    <string name="dlg_multi_continue">Return to home</string>
    <string name="dlg_multi_equality_msg">Player 1 and player 2 are equals...</string>
    <string name="dlg_multi_equality_title">Equality</string>
    <string name="dlg_multi_p2_win_msg">Player 2 win the game !</string>
    <string name="dlg_multi_p2_win_title">Player 2 win</string>
    <string name="dlg_multi_p1_win_msg">Player 1 win the game !</string>
    <string name="dlg_multi_p1_win_title">Player 1 win</string>
    <string name="playedGames">Played games</string>
    <string name="WonGames">Won Games</string>
    <string name="ratioPlayer">Ratio player</string>
    <string name="chooseTitle">Choose your title !</string>
    <string name="edit">Edit</string>
    <string name="colorP1">Color player 1</string>
    <string name="colorP2">Color player 2 / IA</string>
    <string name="mode_choser_pre_chosen_border_tile">Activate border pre-chosen tiles</string>
    <string name="mode_choser_pre_chosen_tile">Activate random pre-chosen tile</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="loading">Loading...</string>
    <string name="noTitle">You don\'t have any title yet</string>
    <string name="pick_title">Choose your title</string>
    <string name="nickname">Nickname</string>
    <string name="ok">Ok</string>
    <string name="noTitleAvailable">You don\'t have any title yet ! You need to play to win some of them. Try to play.</string>
    <string name="home_welcome">Welcome</string>

</resources>
