<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/flat_brown_light"
    tools:context="io.picarete.picarete.ui.fragments.ProfileFragment"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mode_chooser_title"
            style="@style/TitleBanner"
            android:layout_marginBottom="@dimen/paddingGameGrid">

            <ImageView
                android:id="@+id/edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:src="@drawable/profil_edit"
                android:paddingLeft="5dp"/>

            <RelativeLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@+id/edit_profile"
                android:layout_toLeftOf="@+id/edit_profile_invis">

                <io.picarete.picarete.ui.custom.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    style="@style/TitleTheme"
                    android:gravity="center"
                    android:background="@null"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/profile_player_name_tv"/>

                <io.picarete.picarete.ui.custom.CustomFontEditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    style="@style/TitleTheme"
                    android:gravity="center"
                    android:background="@null"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/profile_player_name_et"
                    android:maxLength="15"
                    android:singleLine="true"
                    />
                </RelativeLayout>

            <io.picarete.picarete.ui.custom.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:gravity="center"
                style="@style/SubTitleTheme"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/name_layout"
                android:id="@+id/profile_player_title_tv"
                android:textStyle="italic"
                android:layout_toRightOf="@+id/edit_profile"
                android:layout_toLeftOf="@+id/edit_profile_invis"/>

            <ImageView
                android:id="@+id/edit_profile_invis"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/profil_edit"
                android:paddingRight="5dp"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/profil_xp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_below="@+id/mode_chooser_title"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/profil_xp_labels">

                <io.picarete.picarete.ui.custom.CustomFontTextView
                    android:id="@+id/label_xp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xp"
                    android:paddingRight="5dp"/>

                <io.picarete.picarete.ui.custom.CustomFontTextView
                    android:id="@+id/lvl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/startPoints"
                    android:layout_above="@+id/seekBar_xp"/>
                </LinearLayout>


            <ProgressBar
                android:id="@+id/seekBar_xp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profil_xp_labels"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/progress_xp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:max="100"
                android:progress="50"
                android:paddingBottom="@dimen/paddingGameGrid"/>
            </RelativeLayout>


        <LinearLayout
            android:id="@+id/playedGames"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_below="@+id/profil_xp"
            style="@style/horizontal_label_pair"
            android:gravity="center_vertical">

            <io.picarete.picarete.ui.custom.CustomFontTextView
                android:id="@+id/label_playedGames"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/playedGames"/>

            <io.picarete.picarete.ui.custom.CustomFontTextView
                android:id="@+id/value_playedGames"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/startPoints"
                android:gravity="right"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/wonGames"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_below="@+id/playedGames"
            style="@style/horizontal_label_impair"
            android:gravity="center_vertical">

            <io.picarete.picarete.ui.custom.CustomFontTextView
                android:id="@+id/label_wonGames"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/WonGames"/>

            <io.picarete.picarete.ui.custom.CustomFontTextView
                android:id="@+id/value_wonGames"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/startPoints"
                android:gravity="right"/>

            </LinearLayout>

        <LinearLayout
            android:id="@+id/ratio"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_below="@+id/wonGames"
            style="@style/horizontal_label_pair"
            android:gravity="center_vertical">

            <io.picarete.picarete.ui.custom.CustomFontTextView
                android:id="@+id/label_ratio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ratioPlayer"/>

            <RatingBar
                android:id="@+id/value_ratio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="@integer/ratioStars"
                style="@android:style/Widget.Holo.RatingBar.Small"
                android:gravity="right"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/colorP1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_below="@+id/ratio"
            style="@style/horizontal_label_impair"
            android:gravity="center_vertical">

            <io.picarete.picarete.ui.custom.CustomFontTextView
                android:id="@+id/label_colorP1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/colorP1"/>

            <ImageView
                android:id="@+id/value_colorP1"
                android:layout_width="@dimen/color_swatch_small"
                android:layout_height="@dimen/color_swatch_small"
                android:gravity="right"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/colorP2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_below="@+id/colorP1"
            style="@style/horizontal_label_pair"
            android:gravity="center_vertical">

            <io.picarete.picarete.ui.custom.CustomFontTextView
                android:id="@+id/label_colorP2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/colorP2"/>

            <ImageView
                android:id="@+id/value_colorP2"
                android:layout_width="@dimen/color_swatch_small"
                android:layout_height="@dimen/color_swatch_small"
                android:gravity="right"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
