<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/game_root"
    android:background="@color/flat_blue"
    tools:context="io.picarete.picarete.ui.fragments.SoloGameFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/game_header"
        android:orientation="vertical">

        <io.picarete.picarete.ui.custom.CustomFontTextView
            android:id="@+id/game_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mode"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_centerHorizontal="true"
            style="@style/TitleTheme"
            android:textColor="@color/white"/>

        <io.picarete.picarete.ui.custom.CustomFontTextView
            android:id="@+id/game_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GameMode"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_centerHorizontal="true"
            style="@style/SubTitleTheme"
            android:textColor="@color/white"/>

    </LinearLayout>


    <io.picarete.picarete.ui.custom.CustomFontGridLayout
        android:id="@+id/game_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:columnCount="3"/>

    <io.picarete.picarete.ui.custom.CustomFontTextView
        android:id="@+id/game_scores_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/game_scores"
        android:layout_centerHorizontal="true"
        android:text="@string/score"
        android:textColor="@color/white"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <LinearLayout
        android:id="@+id/game_scores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:paddingBottom="10dp">

        <io.picarete.picarete.ui.custom.CustomFontTextView
            android:id="@+id/game_turn_p1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/yourTurn"
            android:textColor="@color/white"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:gravity="center"/>

        <io.picarete.picarete.ui.custom.CustomFontTextView
            android:id="@+id/game_score_p1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/startPoints"
            android:textColor="@color/white"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:gravity="right|center_vertical"/>

        <io.picarete.picarete.ui.custom.CustomFontTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="/"
            android:textColor="@color/white"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:gravity="center"/>

        <io.picarete.picarete.ui.custom.CustomFontTextView
            android:id="@+id/game_score_p2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/startPoints"
            android:textColor="@color/white"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:gravity="left|center_vertical"/>

        <io.picarete.picarete.ui.custom.CustomFontTextView
            android:id="@+id/game_turn_p2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yourTurn"
            android:textColor="@color/white"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:gravity="center"/>

    </LinearLayout>

</RelativeLayout>
